<resources>
    <string name="app_name">FriendsFusion</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="registration">Sign Up</string>
    <string name="username">Username</string>
    <string name="password_confirm">Confirm password</string>
    <string name="profile_title">Profile of %1$s</string>
    <string name="apply_changes">Apply changes</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_password">New password</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="gallery">Gallery</string>
    <string name="events">Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_info">Base info</string>
    <string name="messengers">Messengers</string>
    <string name="vk_messenger">VKontakte</string>
    <integer name="com_vk_sdk_AppId" translatable="false">51984160</integer>
    <string name="not_logged">Not logged in</string>
    <string name="getting_data">Getting data</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>