<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" >
    </item>

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chat"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/galleryFragment"
        android:icon="@drawable/baseline_insert_photo_24"
        android:title="@string/gallery"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/eventFragment"
        android:icon="@drawable/baseline_event_24"
        android:title="@string/events"
        app:showAsAction="ifRoom" />
</menu>