<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".presentation.fragments.SignInFragment">

    <ToggleButton
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        android:background="@android:color/transparent"
        android:button="@drawable/show_password_selector"
        android:checked="false"
        android:minWidth="0dp"
        android:padding="@dimen/small"
        android:textOff="@null"
        android:textOn="@null"
        android:textSize="0sp"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large"
        android:text="@string/login"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_marginBottom="@dimen/small"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/showPassword"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/showPassword"
        app:layout_constraintStart_toEndOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="@+id/submit"
        app:layout_constraintEnd_toStartOf="@id/submit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/password"
        android:layout_marginEnd="@dimen/medium"
        app:layout_constraintTop_toTopOf="@+id/submit" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/submit"
        app:layout_constraintStart_toStartOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/submit" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/small"
        android:layout_marginTop="@dimen/large"
        android:textColor="@color/md_theme_error"
        android:textSize="@dimen/body"
        android:textStyle="bold"
        android:visibility="gone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/submit"
        app:layout_constraintStart_toStartOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        tools:text="Error" />

</androidx.constraintlayout.widget.ConstraintLayout>